ing.yaml
:apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: backend-ing
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 5000
        path: /
        pathType: Exact
status:
  loadBalancer: {}
